SERVER-9050 GLE with w:1 on config servers shouldn't report "norepl" error